--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@ h1, h2 {
     <p>As músicas que contam nossa história</p>
 
     <div class="ratio ratio-16x9 my-4">
-        <!-- COLE AQUI O IFRAME DO SPOTIFY -->
-        <div style="left: 0; width: 100%; height: 352px; position: relative;"><iframe src="https://open.spotify.com/embed/playlist/3mdR6eRviYp09jrrYKTQrG?utm_source=oembed" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen allow="clipboard-write *; encrypted-media *; fullscreen *; picture-in-picture *;"></iframe></div>
+        <!-- COLE AQUI O IFRAME DO SPOTIFY -->https://open.spotify.com/playlist/3mdR6eRviYp09jrrYKTQrG?si=9WwmgCsnSreLX3Jf7w2fWg&pi=cHwH7iP7RsuNe
     </div>
 </div>
 
@@ -138,117 +137,4 @@ fetch('img/list.json')
 </script>
 
 </body>
-</html>}
-
-@keyframes floatUp {
-    0% { transform: translateY(0) scale(1); opacity: 1;}
-    100% { transform: translateY(-800px) scale(1.5); opacity: 0;}
-}
-
-.carousel img {
-    border-radius: 20px;
-    box-shadow: 0 0 15px rgba(255,105,180,0.8);
-}
-</style>
-</head>
-
-<body>
-
-<div class="container text-center py-5">
-    <h1>💖 Para o Amor da Minha Vida 💖</h1>
-    <p class="lead">Feito com todo meu coração</p>
-
-    <div class="poema my-4">
-        <h2>Meu amor</h2>
-        <p>
-            Entre bilhões de pessoas, foi você que meu coração escolheu.<br>
-            Não apenas pelo seu sorriso, mas pela força absurda que você carrega.<br><br>
-
-            Você enfrenta o mundo com uma coragem que me deixa sem palavras.<br>
-            Ser PCD nunca te impediu — você transforma cada desafio em vitória,<br>
-            e cada dificuldade em mais um motivo para eu te admirar ainda mais.<br><br>
-
-            Eu te amo não só pelo que você é,<br>
-            mas por tudo o que você supera todos os dias.<br>
-            Seu brilho não depende de nada — ele vem da sua alma.<br><br>
-
-            Estar ao seu lado é o maior privilégio da minha vida.<br>
-            Eu prometo ser seu porto seguro, sua risada nos dias tristes<br>
-            e seu abraço quando o mundo parecer pesado demais.<br><br>
-
-            Você é meu amor, minha força e meu lar. 💕
-        </p>
-    </div>
-
-    <h2 class="mt-5">📸 Nossas Memórias</h2>
-
-    <div id="carouselFotos" class="carousel slide my-4" data-bs-ride="carousel">
-        <div class="carousel-inner">
-
-            <!-- Substitua as imagens abaixo -->
-            <div class="carousel-item active">
-                <img src="foto1.jpg" class="d-block w-100">
-            </div>
-
-            <div class="carousel-item">
-                <img src="foto2.jpg" class="d-block w-100">
-            </div>
-
-            <div class="carousel-item">
-                <img src="foto3.jpg" class="d-block w-100">
-            </div>
-
-        </div>
-
-        <button class="carousel-control-prev" data-bs-target="#carouselFotos" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </button>
-
-        <button class="carousel-control-next" data-bs-target="#carouselFotos" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </button>
-    </div>
-
-    <h2 class="mt-5">🎶 Nossa Playlist</h2>
-    <p>As músicas que contam nossa história</p>
-
-    <!-- COLE AQUI O IFRAME DO SPOTIFY -->
-    <div class="ratio ratio-16x9 my-4">
-        <div style="left: 0; width: 100%; height: 352px; position: relative;"><iframe src="https://open.spotify.com/embed/playlist/3mdR6eRviYp09jrrYKTQrG?utm_source=oembed" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen allow="clipboard-write *; encrypted-media *; fullscreen *; picture-in-picture *;"></iframe></div>
-    </div>
-
-</div>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-<script>
-// Rolagem suave
-$('a').on('click', function(e) {
-    if (this.hash !== "") {
-        e.preventDefault();
-        const hash = this.hash;
-        $('html, body').animate({
-            scrollTop: $(hash).offset().top
-        }, 800);
-    }
-});
-
-// Corações flutuando
-setInterval(() => {
-    const heart = $('<div class="heart">💖</div>');
-    heart.css({
-        left: Math.random() * window.innerWidth + 'px',
-        bottom: '-20px',
-        fontSize: (Math.random() * 20 + 10) + 'px'
-    });
-    $('body').append(heart);
-
-    setTimeout(() => {
-        heart.remove();
-    }, 5000);
-}, 300);
-</script>
-
-</body>
-</html>
+        </html>
