--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@ h1, h2 {
     <p>As músicas que contam nossa história</p>
 
     <div class="ratio ratio-16x9 my-4">
-        <!-- COLE AQUI O IFRAME DO SPOTIFY -->https://open.spotify.com/playlist/3mdR6eRviYp09jrrYKTQrG?si=9WwmgCsnSreLX3Jf7w2fWg&pi=cHwH7iP7RsuNe
+        <!-- COLE AQUI O IFRAME DO SPOTIFY -->
+        <div style="left: 0; width: 100%; height: 352px; position: relative;"><iframe src="https://open.spotify.com/embed/playlist/3mdR6eRviYp09jrrYKTQrG?utm_source=oembed" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen allow="clipboard-write *; encrypted-media *; fullscreen *; picture-in-picture *;"></iframe></div>
     </div>
 </div>
 
@@ -130,11 +131,7 @@ fetch('img/list.json')
         const div = document.createElement("div");
         div.className = "carousel-item" + (index === 0 ? " active" : "");
 
-        div.innerHTML = `<img src="img/${foto}" class="d-block w-100">`;
-        container.appendChild(div);
-    });
-});
-</script>
+        div.innerHTML = `<img src="img/${foto}" cla
 
 </body>
         </html>
